--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,10 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/water_system?zeroDateTimeBehavior=convertToNull"
+db.default.username=root
+db.default.password=qwe123
+
+ebean.default = ["models.*"]
