--- a/conf/application.conf
+++ b/conf/application.conf
@@ -300,7 +300,7 @@ play.filters {
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  #db.default.enabled = false
+  db.default.enabled = false
 }
 
 ## Database Connection Pool
@@ -355,6 +355,6 @@ db {
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/water_system?zeroDateTimeBehavior=convertToNull"
 db.default.username=root
-db.default.password=qwe123
+db.default.password=qw
 
 ebean.default = ["models.*"]
