Json output fixed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,14 @@ play.i18n {
   #langCookieHttpOnly = true
 }
 
+play.filters.cors {
+  pathPrefixes = ["/"]
+  allowedOrigins = null
+  allowedHttpMethods = null
+  allowedHttpHeaders = null
+  preflightMaxAge = 3 days
+}
+
 ## Play HTTP settings
 # ~~~~~
 play.http {
@@ -355,6 +363,6 @@ db {
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/water_system?zeroDateTimeBehavior=convertToNull"
 db.default.username=root
-db.default.password=qw
+db.default.password=qwe123
 
 ebean.default = ["models.*"]
